--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,16 @@
 # Stuff to Ignore
+#
+# Directories to ignore
+#
 __pycache__/
-*.txt
-testDir/
+testDir/ # ignore test directory
+#
+# Text type files to ignore
+#
+.txt # ignore .txt files that might be used for notes or accidentally added.
+*.un~ # ignore this. created by vim on (my) Windows configuration.
+*.txt~ # also created by Windows VIM.
+#
+#  test files
+#
+quickTEST.py
